responsive to some extent

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
 
         <div id="menubar">
-            <i class="fa-solid fa-bars fa-2x"></i>
+            <i class="fa-solid fa-bars fa-2x fa-sm-lg"></i>
         </div>
     </header>
 
@@ -65,7 +65,7 @@
                 <div>
                     <div id="what-i-do">
                         <ul>
-                            <article>
+                            <article id="first-what-i-do-article">
                                 <div>
                                     <li>
                                         <h4>Flyer Designs</h4>
@@ -81,7 +81,7 @@
                                         Creative banners, Sport banners, Ad banners</p>
                                 </div>
                             </article>
-                            <article>
+                            <article id="second-what-i-do-article">
                                 <div>
                                     <li>
                                         <h4>Book Cover</h4>
@@ -104,7 +104,7 @@
                                 </div>
                             </article>
 
-                            <article>
+                            <article id="third-what-i-do-article">
                                 <div>
                                     <li>
                                         <h4>Full product Branding</h4>
@@ -134,10 +134,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci vitae, asperiores fugiat
                             assumenda repellendus reiciendis velit distinctio ipsam modi quos eveniet blanditiis facere
                             ab
-                            repudiandae aperiam enim dignissimos? Atque, ad? Libero sit debitis ad asperiores quae
-                            doloribus
-                            vel explicabo alias suscipit amet fugiat voluptatibus, nihil quod adipisci deleniti odio
-                            minus.
+                            repudiandae aperiam enim dignissimos.
                         </p>
                     </div>
                     <div id="about-me-second-div">
@@ -163,7 +160,7 @@
 
             <section id="testimonials">
                 <h2>Testimonials</h2>
-                <div id="testimonials-div" class="container">
+                <div id="testimonials-div">
                     <div class="card">
                         <div><img class="rounded-circle" src="./images/pexels-tarzine-jackson-773371.jpg" alt=""></div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis recusandae quo eos, ducimus
@@ -201,7 +198,7 @@
     </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i id="up"
-            class="fa-solid fa-arrow-up fa-2x"></i></button>
+            class="fa-solid fa-arrow-up fa-lg"></i></button>
 
     <script src="./js/index.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
