--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <i class="fa-brands fa-instagram fa-sm-lg"></i>
         </div>
     </div>
+    <nav id="responsive-nav">
+        <i class="fa-solid fa-xmark fa-2x"></i>
+        <a href="/index.html">Home</a>
+        <a href="/portfolio page/portfolio.html">Portfolio</a>
+    </nav>
     <header>
         <a href="/index.html" id="logo">
             <img src="./images/Frenzy Logo re 4.png" alt="">
