--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <nav id="responsive-nav">
-        <i class="fa-solid fa-xmark fa-2x"></i>
+        <i id="close-nav-bar-icon" class="fa-solid fa-xmark fa-2x"></i>
         <a href="/index.html">Home</a>
         <a href="/portfolio page/portfolio.html">Portfolio</a>
     </nav>
