added potfolio page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav id="responsive-nav">
         <i id="close-nav-bar-icon" class="fa-solid fa-xmark fa-2x"></i>
         <a href="/index.html">Home</a>
-        <a href="/portfolio page/portfolio.html">Portfolio</a>
+        <a href="/portfolio.html">Portfolio</a>
     </nav>
     <header>
         <a href="/index.html" id="logo">
@@ -44,7 +44,7 @@
 
         <nav>
             <a href="/index.html">Home</a>
-            <a href="/portfolio page/portfolio.html">Portfolio</a>
+            <a href="/portfolio.html">Portfolio</a>
         </nav>
 
         <div id="menubar">
