completed portfolio page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <body>
     <div id="top-header">
         <div id="callable-div">
-            <a href="tel:+2347050286131"><i id="phone" class="fa-solid fa-phone"></i><span id="number">+234-705-028-6131</span></a>
-            <a href=""><i id="envelop" class="fa-solid fa-envelope"></i>egonduihemebiri@gmail.com</a>
+            <a href="tel:+2349057359532"><i id="phone" class="fa-solid fa-phone"></i><span
+                    id="number">+234-905-735-9532</span></a>
+            <a href="mailto:Uihemebiri@gmail.com"><i id="envelop" class="fa-solid fa-envelope"></i>Uihemebiri@gmail.com</a>
         </div>
         <div id="social-icons">
-            <i class="fa-brands fa-whatsapp fa-sm-lg"></i>
-            <i class="fa-brands fa-facebook-f fa-sm-lg"></i>
-            <i class="fa-brands fa-instagram fa-sm-lg"></i>
+            <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
+            <a href="https://www.instagram.com/invites/contact/?i=ngcyjxgtrg5a&utm_content=nil0vko"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
     <nav id="responsive-nav">
