--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,15 @@
 <body>
     <div id="top-header">
         <div id="callable-div">
-            <a href="tel:+2347050286131"><i id="phone" class="fa-solid fa-phone"></i><span
-                    id="number">+234-705-028-6131</span></a>
-            <a href=""><i id="envelop" class="fa-solid fa-envelope"></i>egonduihemebiri@gmail.com</a>
+            <a href="tel:+2349057359532"><i id="phone" class="fa-solid fa-phone"></i><span
+                    id="number">+234-905-735-9532</span></a>
+            <a href="mailto:Uihemebiri@gmail.com"><i id="envelop"
+                    class="fa-solid fa-envelope"></i>Uihemebiri@gmail.com</a>
         </div>
         <div id="social-icons">
-            <i class="fa-brands fa-whatsapp fa-sm-lg"></i>
-            <i class="fa-brands fa-facebook-f fa-sm-lg"></i>
-            <i class="fa-brands fa-instagram fa-sm-lg"></i>
+            <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
+            <a href="https://www.instagram.com/invites/contact/?i=ngcyjxgtrg5a&utm_content=nil0vko"><i
+                    class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
     <nav id="responsive-nav">
@@ -52,29 +53,153 @@
             <i class="fa-solid fa-bars fa-2x fa-sm-lg"></i>
         </div>
     </header>
+    <h1>My Portfolio</h1>
+    <main class="container-xl">
+        <div id="buttonFullContainer">
+            <div id="myBtnContainer">
+                <button class="btn active" onclick="filterSelection('all')">All</button>
+                <button class="btn" onclick="filterSelection('logo')">Logos</button>
+                <button class="btn" onclick="filterSelection('product-branding')">Product Branding</button>
+                <button class="btn" onclick="filterSelection('flyer')">Flyers</button>
+                <button class="btn" onclick="filterSelection('banner')">Banners</button>
+                <button class="btn" onclick="filterSelection('book-cover')">Book Covers</button>
 
-    <main>
-        <ul>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-            <li><img src="./images/porfolio/3 b.jpg" alt=""></li>
-        </ul>
+            </div>
+        </div>
+
+        <!-- Portfolio Gallery Grid -->
+        <div id="everything">
+
+            <div class="contain">
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/3 b.jpg" alt="" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/3D.jpg" alt="" style="width:100%">
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/BRILLIANT TUTORS ii ol c.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column book-cover">
+                    <div class="content">
+                        <img src="./images/porfolio/pq ARTS FULL.JPG" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/Class 1.png" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/Frenzy E logo.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column product-branding">
+                    <div class="content">
+                        <img src="./images/porfolio/LUDE.jpg" style="width:100%">
+                    </div>
+                </div>
+            </div>
+            <div class="contain">
+
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/Frenzy designs AD 3.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/Graffiti.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column book-cover">
+                    <div class="content">
+                        <img src="./images/porfolio/jz 3.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/Nakova 5.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column product-branding">
+                    <div class="content">
+                        <img src="./images/porfolio/UG front.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/round (2).jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column banner">
+                    <div class="content">
+                        <img src="./images/porfolio/Banner c.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/UG Logo idea C.jpg" style="width:100%">
+                    </div>
+                </div>
+            </div>
+
+            <div class="contain">
+
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/Screfire.png" style="width:100%">
+                    </div>
+                </div>
+                <div class="column product-branding">
+                    <div class="content">
+                        <img src="./images/porfolio/Snack mockup.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/Putme reg d.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/SPS b.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/SPS mockup.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/TT  Logo.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/TT b.jpg" style="width:100%">
+                    </div>
+                </div>
+                <div class="column product-branding">
+                    <div class="content">
+                        <img src="./images/porfolio/UG front and back.jpg" style="width:100%">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -90,6 +215,7 @@
             class="fa-solid fa-arrow-up fa-lg"></i></button>
 
     <script src="./js/index.js"></script>
+    <script src="./js/portfolio.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="/js/fontawesome.min.js"></script>
 </body>
