--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
     </div>
     <nav id="responsive-nav">
         <i id="close-nav-bar-icon" class="fa-solid fa-xmark fa-2x"></i>
-        <a href="/index.html">Home</a>
-        <a href="/portfolio.html">Portfolio</a>
+        <a href="./index.html">Home</a>
+        <a href="./portfolio.html">Portfolio</a>
     </nav>
     <header>
         <a href="/index.html" id="logo">
@@ -45,8 +45,8 @@
         </a>
 
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/portfolio.html">Portfolio</a>
+            <a href="./index.html">Home</a>
+            <a href="./portfolio.html">Portfolio</a>
         </nav>
 
         <div id="menubar">
