--- a/portfolio.html
+++ b/portfolio.html
@@ -67,48 +67,43 @@
             </div>
         </div>
 
+        <div class="full-img" id="fullImgBox" onclick="closeFullImg()">
+            <img src="./images/porfolio/3 b.jpg" id="full-img" alt="" style="width:100%"></a>
+            <span onclick="closeFullImg()">X</span>
+        </div>
+
         <!-- Portfolio Gallery Grid -->
         <div id="everything">
 
             <div class="contain">
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/3 b.jpg" alt="" style="width:100%">
+                        <img src="./images/porfolio/3 b.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%">
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/3D.jpg" alt="" style="width:100%">
+                        <img src="./images/porfolio/3D.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column flyer">
                     <div class="content">
-                        <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" style="width:100%">
-                    </div>
-                </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/BRILLIANT TUTORS ii ol c.jpg" style="width:100%">
+                        <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column book-cover">
                     <div class="content">
-                        <img src="./images/porfolio/pq ARTS FULL.JPG" style="width:100%">
+                        <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/Class 1.png" style="width:100%">
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/Frenzy E logo.jpg" style="width:100%">
+                        <img src="./images/porfolio/Frenzy E logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column product-branding">
                     <div class="content">
-                        <img src="./images/porfolio/LUDE.jpg" style="width:100%">
+                        <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
             </div>
@@ -116,42 +111,32 @@
 
                 <div class="column flyer">
                     <div class="content">
-                        <img src="./images/porfolio/Frenzy designs AD 3.jpg" style="width:100%">
+                        <img src="./images/porfolio/Frenzy designs AD 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/Graffiti.jpg" style="width:100%">
+                        <img src="./images/porfolio/Graffiti.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column book-cover">
                     <div class="content">
-                        <img src="./images/porfolio/jz 3.jpg" style="width:100%">
+                        <img src="./images/porfolio/jz 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column flyer">
                     <div class="content">
-                        <img src="./images/porfolio/Nakova 5.jpg" style="width:100%">
-                    </div>
-                </div>
-                <div class="column product-branding">
-                    <div class="content">
-                        <img src="./images/porfolio/UG front.jpg" style="width:100%">
+                        <img src="./images/porfolio/Nakova 5.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/round (2).jpg" style="width:100%">
+                        <img src="./images/porfolio/round (2).jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column banner">
                     <div class="content">
-                        <img src="./images/porfolio/Banner c.jpg" style="width:100%">
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/UG Logo idea C.jpg" style="width:100%">
+                        <img src="./images/porfolio/Banner c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
             </div>
@@ -160,42 +145,65 @@
 
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/Screfire.png" style="width:100%">
+                        <img src="./images/porfolio/Screfire.png" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column product-branding">
                     <div class="content">
-                        <img src="./images/porfolio/Snack mockup.jpg" style="width:100%">
+                        <img src="./images/porfolio/Snack mockup.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column flyer">
                     <div class="content">
-                        <img src="./images/porfolio/Putme reg d.jpg" style="width:100%">
+                        <img src="./images/porfolio/Putme reg d.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/SPS b.jpg" style="width:100%">
+                        <img src="./images/porfolio/SPS b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column logo">
                     <div class="content">
-                        <img src="./images/porfolio/SPS mockup.jpg" style="width:100%">
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/TT  Logo.jpg" style="width:100%">
+                        <img src="./images/porfolio/TT  Logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column flyer">
                     <div class="content">
-                        <img src="./images/porfolio/TT b.jpg" style="width:100%">
+                        <img src="./images/porfolio/TT b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="contain">
+                <div class="column product-branding">
+                    <div class="content">
+                        <img src="./images/porfolio/UG front and back.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/UG Logo idea C.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    </div>
+                </div>
+                <div class="column flyer">
+                    <div class="content">
+                        <img src="./images/porfolio/BRILLIANT TUTORS ii ol c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/SPS mockup.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
                 <div class="column product-branding">
                     <div class="content">
-                        <img src="./images/porfolio/UG front and back.jpg" style="width:100%">
+                        <img src="./images/porfolio/UG front.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    </div>
+                </div>
+                <div class="column logo">
+                    <div class="content">
+                        <img src="./images/porfolio/Class 1.png" onclick="openFullImg(this.src)" style="width:100%"></a>
                     </div>
                 </div>
             </div>
@@ -216,7 +224,7 @@
 
     <script src="./js/index.js"></script>
     <script src="./js/portfolio.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script src="/js/fontawesome.min.js"></script>
 </body>
 
