--- a/portfolio.html
+++ b/portfolio.html
@@ -57,12 +57,12 @@
     <main class="container-xl">
         <div id="buttonFullContainer">
             <div id="myBtnContainer">
-                <button class="btn active" onclick="filterSelection('all')">All</button>
-                <button class="btn" onclick="filterSelection('logo')">Logos</button>
-                <button class="btn" onclick="filterSelection('product-branding')">Product Branding</button>
-                <button class="btn" onclick="filterSelection('flyer')">Flyers</button>
-                <button class="btn" onclick="filterSelection('banner')">Banners</button>
-                <button class="btn" onclick="filterSelection('book-cover')">Book Covers</button>
+                <a href="#" class="btn active" data-filter="all">All</a>
+                <a href="#" class="btn" data-filter="logo">Logos</a>
+                <a href="#" class="btn" data-filter="product-branding">Product Branding</a>
+                <a href="#" class="btn" data-filter="flyer">Flyers</a>
+                <a href="#" class="btn" data-filter="banner">Banners</a>
+                <a href="#" class="btn" data-filter="book-cover">Book Covers</a>
 
             </div>
         </div>
@@ -75,138 +75,138 @@
         <!-- Portfolio Gallery Grid -->
         <div id="everything">
 
-            <div class="contain">
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/3 b.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%">
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/3D.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column book-cover">
-                    <div class="content">
-                        <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/Frenzy E logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column product-branding">
-                    <div class="content">
-                        <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/3 b.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%">
                 </div>
             </div>
-            <div class="contain">
-
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/Frenzy designs AD 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/3D.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%"></a>
                 </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/Graffiti.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
-                <div class="column book-cover">
-                    <div class="content">
-                        <img src="./images/porfolio/jz 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column book-cover">
+                <div class="content">
+                    <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/Nakova 5.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/Frenzy E logo.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/round (2).jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column banner">
-                    <div class="content">
-                        <img src="./images/porfolio/Banner c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column product-branding">
+                <div class="content">
+                    <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
 
-            <div class="contain">
-
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/Screfire.png" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/Frenzy designs AD 3.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
-                <div class="column product-branding">
-                    <div class="content">
-                        <img src="./images/porfolio/Snack mockup.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/Graffiti.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/Putme reg d.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column book-cover">
+                <div class="content">
+                    <img src="./images/porfolio/jz 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/SPS b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/Nakova 5.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/TT  Logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/round (2).jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/TT b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            </div>
+            <div class="column banner">
+                <div class="content">
+                    <img src="./images/porfolio/Banner c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
 
-            <div class="contain">
-                <div class="column product-branding">
-                    <div class="content">
-                        <img src="./images/porfolio/UG front and back.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/UG Logo idea C.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column flyer">
-                    <div class="content">
-                        <img src="./images/porfolio/BRILLIANT TUTORS ii ol c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/SPS mockup.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column product-branding">
-                    <div class="content">
-                        <img src="./images/porfolio/UG front.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
-                </div>
-                <div class="column logo">
-                    <div class="content">
-                        <img src="./images/porfolio/Class 1.png" onclick="openFullImg(this.src)" style="width:100%"></a>
-                    </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/Screfire.png" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
+            <div class="column product-branding">
+                <div class="content">
+                    <img src="./images/porfolio/Snack mockup.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/Putme reg d.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/SPS b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/TT  Logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/TT b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+
+            <div class="column product-branding">
+                <div class="content">
+                    <img src="./images/porfolio/UG front and back.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/UG Logo idea C.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/BRILLIANT TUTORS ii ol c.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/SPS mockup.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column product-branding">
+                <div class="content">
+                    <img src="./images/porfolio/UG front.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column logo">
+                <div class="content">
+                    <img src="./images/porfolio/Class 1.png" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+
         </div>
     </main>
 
